Impl refine logic & add useful tags